add before/after current album to add options

--- a/src/content/docs/next/configuration/keybinds.mdx
+++ b/src/content/docs/next/configuration/keybinds.mdx
@@ -359,8 +359,8 @@ the keybind is directly configured to display a modal.
 Possible values for the action `<kind>` are either a `Modal` or `Action`. Where `Modal` takes a list of
 tuples of a label and the action configuration and `Action` takes just a single action configuration.
 
-Possible `position`s are: `StartOfQueue`, `EndOfQueue`, `BeforeCurrentSong`, `AfterCurrentSong` and
-`Replace`.
+Possible `position`s are: `StartOfQueue`, `EndOfQueue`, `BeforeCurrentSong`, `AfterCurrentSong`,
+`AfterCurrentAlbum`, `BeforeCurrentAlbum` and `Replace`.
 
 Possible `autoplay` values are:
 
